# spacetaxi

./: .gitignore  000-default.html  CLAUDE.md  Cargo.toml  Dockerfile  README.md  SPEC.md  config.example.toml  docker-compose.yml
cli/: Cargo.toml
cli/src/: chunked.rs  main.rs  upload.rs
server/: Cargo.toml  build.rs
server/src/: chunked.rs  db.rs  main.rs  routes.rs  storage.rs
shared/: Cargo.toml
shared/src/: crypto.rs  lib.rs  types.rs
web/: build.mjs  package-lock.json  package.json
web/src/: decrypt.ts
