[workspace]
resolver = "2"
members = [
    "cli",
    "server",
    "shared",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["spacetaxi contributors"]

[workspace.dependencies]
# Shared dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
base64 = "0.22"

# Crypto
chacha20poly1305 = "0.10"
argon2 = "0.5"
rand = "0.8"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP
reqwest = { version = "0.12", features = ["multipart", "stream"] }
axum = { version = "0.8", features = ["multipart"] }
tower = { version = "0.5", features = ["limit", "timeout"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# CLI
clap = { version = "4.0", features = ["derive"] }
indicatif = "0.17"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
