[package]
name = "spacetaxi"
version.workspace = true
edition.workspace = true

[[bin]]
name = "spacetaxi"
path = "src/main.rs"

[dependencies]
spacetaxi-shared = { path = "../shared" }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }

reqwest = { workspace = true, features = ["blocking", "multipart", "stream", "json"] }
clap = { workspace = true }
indicatif = { workspace = true }
tokio = { workspace = true }
