[package]
name = "spacetaxi-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "spacetaxi-server"
path = "src/main.rs"

[dependencies]
spacetaxi-shared = { path = "../shared" }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }

axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
futures = "0.3"
bytes = "1.0"
